overflow was fixed for tablet and desktop

--- a/src/sassStyles/blocks/_page.scss
+++ b/src/sassStyles/blocks/_page.scss
@@ -7,5 +7,9 @@
 
   &--with-menu {
     overflow: hidden;
+
+    @include onTablet {
+      overflow: auto;
+    }
   }
 }
